tests/__snapshots__/api-toBeUnknown.test.ts.snap
// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toBeUnknown: stderr 1`] = `
"Error: Type 'string' is not 'unknown'.

  12 |   expect(returnsUnknown()).type.toBeUnknown();
  13 | 
> 14 |   expect(returnsString()).type.toBeUnknown();
     |                                ^
  15 | });
  16 | 
  17 | test("is NOT unknown?", () => {

       at ./__typetests__/toBeUnknown.test.ts:14:32 ❭ is unknown?

Error: Type 'unknown' is 'unknown'.

  18 |   expect(returnsString()).type.not.toBeUnknown();
  19 | 
> 20 |   expect(returnsUnknown()).type.not.toBeUnknown();
     |                                     ^
  21 | });
  22 | 

       at ./__typetests__/toBeUnknown.test.ts:20:37 ❭ is NOT unknown?

"
`;

exports[`toBeUnknown: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

fail ./__typetests__/toBeUnknown.test.ts
  × is unknown?
  × is NOT unknown?

Targets:    1 failed, 1 total
Test files: 1 failed, 1 total
Tests:      2 failed, 2 total
Assertions: 2 failed, 2 passed, 4 total
Duration:   <<timestamp>>

Ran all test files.
"
`;
